fastmetrics-derive/tests/ui/fail/label_index_mapping/union_input.rs
use fastmetrics_derive::LabelIndexMapping;

#[derive(LabelIndexMapping)]
union NotSupported {
    x: u8,
}

fn main() {}
